--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title> Anoa Private Villa - Love Bali Villas Blogs</title>
-  <meta content="" name="Anoa Private Villa 4 bedrooms 14 Minutes to Canggu Beach Recommended by Love Bali Villas @lovebalivillas Expedia Partner">
-  <meta content="" name="Experience the epitome of luxury at Anoa Private Villa, a stunning 4-bedroom villa located just 14 minutes away from the pristine shores of Canggu Beach.  
+  <title> Villa Verde - Love Bali Villas Blogs</title>
+  <meta content="" name="Villa Verde 4 bedrooms Private Villa in Canggu Recommended by Love Bali Villas @lovebalivillas Expedia Partner">
+  <meta content="" name="Discover unparalleled luxury at Villa Verde, a magnificent 4-bedroom villa nestled in the heart of Canggu.  
   ">
 
   <!-- Favicons -->
@@ -85,7 +85,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="https://expedia.com/affiliates/Canggu-Hotels-Anoa-Private-Villa-14-Minutes-To-Canggu-Beach.0gvwq7S" target="_blank">Book Now</a></li>
+          <li><a class="getstarted scrollto" href="https://expedia.com/affiliates/lovebalivillas/villa-verde" target="_blank">Book Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -100,11 +100,11 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2> Anoa Private Villa 4 bedrooms 14 Minutes to Canggu Beach Recommended by Love Bali Villas @lovebalivillas Expedia Partner</h2>
+          <h2> Villa Verde 4 bedrooms Private Villa in Canggu Recommended by Love Bali Villas @lovebalivillas Expedia Partner</h2>
           <ol>
             <li><a href="https://www.lovebalivillas.pro/">Home</a></li>
             <li><a href="http://blogs.lovebalivillas.pro/">Blogs</a></li>
-            <li> Anoa Private Villa </li>
+            <li> Villa Verde </li>
           </ol>
         </div>
 
@@ -122,43 +122,43 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/anoa/1.jpg" alt="">
+                  <img src="assets/img/blog/verde/1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/anoa/2.jpg" alt="">
+                  <img src="assets/img/blog/verde/2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/anoa/3.jpg" alt="">
+                  <img src="assets/img/blog/verde/3.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/anoa/4.jpg" alt="">
+                  <img src="assets/img/blog/verde/4.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/anoa/5.jpg" alt="">
+                  <img src="assets/img/blog/verde/5.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/anoa/6.jpg" alt="">
+                  <img src="assets/img/blog/verde/6.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/anoa/7.jpg" alt="">
+                  <img src="assets/img/blog/verde/7.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/anoa/8.jpg" alt="">
+                  <img src="assets/img/blog/verde/8.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/anoa/9.jpg" alt="">
+                  <img src="assets/img/blog/verde/9.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/anoa/10.jpg" alt="">
+                  <img src="assets/img/blog/verde/10.jpg" alt="">
                 </div>
 
               </div>
@@ -168,18 +168,16 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3> Anoa Private Villa Information</h3>
+              <h3> Villa Verde Villa Information</h3>
               <ul>
-                <li><strong>Property Highlights:</strong> This villa is located on Jl. Raya Babakan, Canggu.
-                  This villa offers wifi, kitchen, air conditioning, work desk, TV, private bathroom with towels, hairdryer, shower and toiletries.
-                  Other accommodations close to this villa are Canggu Beach 4.1 km, Batu Bolong Beach 4.1 km, Echo Beach 4.1 km, Pererenan Beach 4.1 km, Nelayan Beach 4.1 km.  </li>
-                <li><strong>Popular Amenities:</strong> Pool, Kitchen, Parking included, Free WiFi, Air conditioning. </li>
+                <li><strong>Property Highlights:</strong> An outdoor pool, dry cleaning, and laundry facilities are available at this smoke-free villa. Self parking is free. Other amenities include a garden and barbecue grills. The villa boasts a private pool and a deep soaking tub, while offering a dining area and a kitchenette. Guests can appreciate conveniences like a refrigerator and a microwave, and other amenities include free WiFi and a Smart TV.  </li>
+                <li><strong>Popular Amenities:</strong> Pool, Kitchen, Parking included, Free WiFi, Air conditioning & Laundry. </li>
                 <li><strong>Explore Area:</strong> </li> 
-                <p> Echo Beach - 13 min drive </p>
-                 <p> Canggu Beach - 13 min drive </p>
-                 <p> Seminyak Beach - 19 min drive </p>
-  <p>Denpasar (DPS-Ngurah Rai Intl.) - 47 min drive </p>
-                <li><strong>Book Now</strong>: <a href="https://expedia.com/affiliates/Canggu-Hotels-Anoa-Private-Villa-14-Minutes-To-Canggu-Beach.0gvwq7S" target="_blank">Check The Availablity</a></li>
+                <p> Splash Waterpark Bali - 18 min walk </p>
+                 <p> Canggu Square - 19 min walk </p>
+                 <p> Canggu Beach - 21 min drive </p>
+  <p>Denpasar (DPS-Ngurah Rai Intl.) - 44 min drive </p>
+                <li><strong>Book Now</strong>: <a href="https://expedia.com/affiliates/lovebalivillas/villa-verde" target="_blank">Check The Availablity</a></li>
               </ul>
             </div>
             <div>
@@ -189,36 +187,37 @@
           <div class="eg-widget" data-widget="search" data-program="us-expedia" data-lobs="stays,flights" data-network="pz" data-camref="1100lC75G"></div>
 <script class="eg-widgets-script" src="https://affiliates.expediagroup.com/products/widgets/assets/eg-widgets.js"></script>
           <p>
-            Experience the epitome of luxury at <a href="https://expedia.com/affiliates/Canggu-Hotels-Anoa-Private-Villa-14-Minutes-To-Canggu-Beach.0gvwq7S" target="_blank">Anoa Private Villa</a> , a stunning 4-bedroom villa located just 14 minutes away from the pristine shores of Canggu Beach. Recommended by Love Bali Villas and proudly partnered with Expedia, this exquisite villa offers an unparalleled blend of opulence, comfort, and convenience. Explore the perfect destination for your next Bali getaway.
+            Discover unparalleled luxury at <a href="https://expedia.com/affiliates/lovebalivillas/villa-verde" target="_blank">Villa Verde</a>, a magnificent 4-bedroom villa nestled in the heart of Canggu. Endorsed by Love Bali Villas and proudly partnered with Expedia, Villa Verde is your gateway to opulence and tranquility. Explore this exquisite villa for an unforgettable Bali escape.
 
           </p>
           <p>
-            When it comes to finding the perfect haven for your Bali escape, <a href="https://expedia.com/affiliates/Canggu-Hotels-Anoa-Private-Villa-14-Minutes-To-Canggu-Beach.0gvwq7S" target="_blank">Anoa Private Villa</a> emerges as an unparalleled choice. Nestled in the heart of paradise, this magnificent 4-bedroom villa promises an indulgent experience that combines luxury, tranquility, and proximity to the famous Canggu Beach. Endorsed by Love Bali Villas and partnered with Expedia, <a href="https://expedia.com/affiliates/Canggu-Hotels-Anoa-Private-Villa-14-Minutes-To-Canggu-Beach.0gvwq7S" target="_blank">Anoa Private Villa</a> is the epitome of opulence, making it a must-consider accommodation option for your next tropical getaway.
+            Escape to the enchanting paradise of Canggu and immerse yourself in the epitome of luxury at <a href="https://expedia.com/affiliates/lovebalivillas/villa-verde" target="_blank">Villa Verde</a>. With its unrivaled blend of elegance, comfort, and proximity to the vibrant heart of Canggu, this 4-bedroom villa stands as a testament to opulence. As a recommended choice by Love Bali Villas and a proud partner of Expedia, <a href="https://expedia.com/affiliates/lovebalivillas/villa-verde" target="_blank">Villa Verde</a> is poised to redefine your notion of a lavish getaway.
 
           </p>
-<h6> Luxury Redefined: </h6>
-<p> Anoa Private Villa redefines luxury through its impeccable design and world-class amenities. Each of the four spacious bedrooms is elegantly adorned and comes complete with modern comforts, ensuring a restful night's sleep. The villa's living spaces seamlessly blend indoor and outdoor living, allowing you to fully immerse yourself in Bali's natural beauty. You'll find a fully equipped kitchen, a lavish dining area, and a cozy lounge, all designed to cater to your relaxation and entertainment needs.
+<h6> Luxurious Retreat: </h6>
+<p> Villa Verde presents a haven of luxury that transcends all expectations. Each of the villa's four bedrooms exudes sophistication, offering a serene sanctuary for relaxation and rejuvenation. The living spaces are meticulously designed, seamlessly merging the outdoors with the indoors to create an ambiance that is both inviting and opulent. From the modern kitchen to the elegant dining area, every facet of the villa exudes a sense of grandeur.
 
 </p>
 <h6> Tranquil Oasis: </h6>
-<p> Stepping into Anoa Private Villa is like entering a serene oasis. The lush tropical garden surrounding the villa creates a sense of peace and tranquility, providing the perfect backdrop for unwinding by the private pool or indulging in alfresco dining. The villa's architecture is a seamless blend of traditional Balinese influences and modern design, creating a harmonious ambiance that soothes the soul.
+<p> Stepping into <a href="https://expedia.com/affiliates/lovebalivillas/villa-verde" target="_blank">Villa Verde</a> transports you to a realm of tranquility. The villa is enveloped by lush, tropical gardens that provide a sense of serenity. Lounge by the private pool, bask in the warm Bali sun, or unwind with a meal in the alfresco dining area. The fusion of contemporary design and traditional Balinese elements crafts an atmosphere that is as calming as it is captivating.
 
 </p>
-<h6> Prime Location: </h6>
-<p> One of the highlights of Anoa Private Villa is its prime location. Situated a mere 14 minutes away from the famous Canggu Beach, guests have easy access to Bali's stunning coastline. Whether you're a surfer chasing the perfect wave or a beach lover seeking the sun's warm embrace, the proximity of the villa to the beach ensures you can make the most of your time in Bali.
+<h6> Prime Canggu Location: </h6>
+<p> Villa Verde boasts a prime location that places you at the heart of Canggu's allure. From the villa's doorstep, it's a short journey to the vibrant Canggu Beach, where sun, surf, and sand await. Whether you're an avid surfer chasing the waves or a traveler seeking solace by the sea, <a href="https://expedia.com/affiliates/lovebalivillas/villa-verde" target="_blank">Villa Verde</a>'s proximity to the beach ensures that you can fully indulge in Bali's coastal charm.
 
 </p>
 <h6> Recommended by Love Bali Villas, Expedia Partner: </h6>
-<p> Anoa Private Villa comes highly recommended by Love Bali Villas, a trusted name in the luxury villa rental industry. This endorsement speaks volumes about the villa's quality and impeccable service. Additionally, <a href="https://expedia.com/affiliates/Canggu-Hotels-Anoa-Private-Villa-14-Minutes-To-Canggu-Beach.0gvwq7S" target="_blank">Anoa Private Villa</a> is a proud partner of Expedia, providing you with a hassle-free booking experience and peace of mind.
+<p> Villa Verde carries the esteemed recommendation of Love Bali Villas, a distinguished name in luxury villa experiences. This endorsement is a testament to the villa's commitment to excellence. Furthermore, as an Expedia partner, <a href="https://expedia.com/affiliates/lovebalivillas/villa-verde" target="_blank">Villa Verde</a> offers a seamless and trustworthy booking process, ensuring your journey to paradise begins with ease.
 
 </p>
-<h6> Amenities and Services: </h6>
-<p> From personalized concierge services to daily housekeeping, <a href="https://expedia.com/affiliates/Canggu-Hotels-Anoa-Private-Villa-14-Minutes-To-Canggu-Beach.0gvwq7S" target="_blank">Anoa Private Villa</a> ensures that every aspect of your stay is nothing short of exceptional. The villa offers a range of amenities, including complimentary Wi-Fi, flat-screen TVs, and air conditioning. The dedicated staff is on hand to cater to your needs and make your stay truly memorable.
+<h6> Amenities and Beyond: </h6>
+<p> Anticipating your every need, <a href="https://expedia.com/affiliates/lovebalivillas/villa-verde" target="_blank">Villa Verde</a> provides an array of amenities to elevate your stay. Complimentary Wi-Fi, state-of-the-art entertainment systems, and air conditioning ensure your comfort. The dedicated staff offers personalized concierge services and daily housekeeping, ensuring that your experience is nothing short of remarkable.
 
 </p>
-<h6> Your Gateway to Balinese Luxury: </h6>
+<h6> Your Gateway to Unforgettable Luxury: </h6>
 <p>
-  Anoa Private Villa encapsulates the essence of Balinese luxury. With its exquisite design, prime location, and top-notch amenities, this 4-bedroom haven offers an idyllic escape for those seeking a blend of relaxation and adventure. Whether you're traveling with family, friends, or a loved one, Anoa Private Villa guarantees an unforgettable stay that will leave you longing to return to its tranquil embrace.
+  Villa Verde is more than a destination; it's an experience that transcends the ordinary. Its luxurious design, strategic location, and commitment to hospitality make it the quintessential choice for an extraordinary Bali vacation. Whether you're seeking adventure, relaxation, or a fusion of both, Villa Verde promises an unforgettable escape that lingers in your memories.
+
 </p>
 
 <div class="eg-widget" data-widget="search" data-program="us-expedia" data-lobs="stays,flights" data-network="pz" data-camref="1100lC75G"></div>
