--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title> Villa Verde - Love Bali Villas Blogs</title>
-  <meta content="" name="Villa Verde 4 bedrooms Private Villa in Canggu Recommended by Love Bali Villas @lovebalivillas Expedia Partner">
+  <meta content="" name="Love Bali Villas, @lovebalivillas, Love Bali Villas Blogs, Romantic honeymoon villa Canggu, Love Bali Villas recommendation, Expedia partner villa Canggu, Private pool honeymoon retreat, Romantic villa accommodation, Intimate Bali getaway, Luxury honeymoon rental, Canggu romantic escapade, Exquisite honeymoon haven,Villa Verde, Canggu, Bali, Indonesia">
   <meta content="" name="Discover unparalleled luxury at Villa Verde, a magnificent 4-bedroom villa nestled in the heart of Canggu.  
   ">
 
@@ -187,7 +187,7 @@
           <div class="eg-widget" data-widget="search" data-program="us-expedia" data-lobs="stays,flights" data-network="pz" data-camref="1100lC75G"></div>
 <script class="eg-widgets-script" src="https://affiliates.expediagroup.com/products/widgets/assets/eg-widgets.js"></script>
           <p>
-            Discover unparalleled luxury at <a href="https://expedia.com/affiliates/lovebalivillas/villa-verde" target="_blank">Villa Verde</a>, a magnificent 4-bedroom villa nestled in the heart of Canggu. Endorsed by Love Bali Villas and proudly partnered with Expedia, Villa Verde is your gateway to opulence and tranquility. Explore this exquisite villa for an unforgettable Bali escape.
+            <a href="https://www.anyadya.club/" target="_blank"> (Anya Dya - Aug 23) </a>  Discover unparalleled luxury at <a href="https://expedia.com/affiliates/lovebalivillas/villa-verde" target="_blank">Villa Verde</a>, a magnificent 4-bedroom villa nestled in the heart of Canggu. Endorsed by Love Bali Villas and proudly partnered with Expedia, Villa Verde is your gateway to opulence and tranquility. Explore this exquisite villa for an unforgettable Bali escape.
 
           </p>
           <p>
